syntax = "proto3";
package torchft;

message RaftMessageRequest {
    // Request message contains the serialized Raft proto message.
    bytes message = 1;
}

message RaftMessageResponse {
}

message NodeInfo {
    uint64 rank = 1;
    string address = 2;
}

message InfoRequest {
    NodeInfo requester = 1;
}

message InfoResponse {
    repeated NodeInfo peers = 1;
}

service CoordinatorService {
    rpc RaftMessage (RaftMessageRequest) returns (RaftMessageResponse);
    rpc Info (InfoRequest) returns (InfoResponse);
}

message LighthouseQuorumRequest {
}

message LighthouseQuorumResponse {
}

service Lighthouse {
    rpc Quorum (LighthouseQuorumRequest) returns (LighthouseQuorumResponse);
}

message ManagerQuorumRequest {
    int64 rank = 1;
}

message ManagerQuorumResponse {
    string store_address = 1;
}

message CheckpointRequest {
    int64 rank = 1;
}

message CheckpointResponse {
    string address = 1;
}

service Manager {
    rpc Quorum (ManagerQuorumRequest) returns (ManagerQuorumResponse);
    rpc Checkpoint(CheckpointRequest) returns (CheckpointResponse);
}